# certif-politique

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  dockerfile  exploration.ipynb  pyproject.toml  script.py
.github/workflows/: test.yml
app/: main.py  model.py  script.py
app/data_engineering/: data_access.py  data_cleaning.py  database.py  feature_engineering.py  utils.py
app/ml/: main.py  model.py  multi_column_label_encode.py  utils.py
app/utils/: logger.py  metaclass.py  multi_column_label_encode.py
certifia/: data_access.py  database.py  feature_engineering.py  main.py  training.py
certifia/data_engineering/: data_access.py  database.py
certifia/serving/: app.py
certifia/serving/templates/: answer.html  app.html  data.html  form.html
certifia/templates/: form.html
certifia/utils/: logger.py  metaclass.py  multi_column_label_encode.py
data/output/: data_cleaner.pkl  feature_engineering.pkl  rf_model.pkl
hooks/: commit-msg
models/: rf_model.pkl
notebooks/: 001_ROFA_exploration.ipynb  002_ROFA_DATAVIZ.ipynb  exploration.ipynb
templates/: form.html
tests/: conftest.py  test_data_access.py  test_database.py  test_feature_engineering.py  test_main.py  test_training.py
tests/data_engineering/: test_data_access.py  test_data_cleaning.py  test_database.py  test_feature_engineering.py  test_utils.py
tests/ml/: test_model.py  test_multi_column_label_encode.py  test_utils.py
tests/serving/: test_app.py
tests/utils/: test_logger.py  test_multi_column_label_encode.py
